--- a/app/mobile/package.json
+++ b/app/mobile/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-community/datetimepicker": "^6.7.1",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
     "expo": "~46.0.16",
     "expo-checkbox": "~2.2.0",
     "expo-constants": "~13.2.4",
+    "expo-image-picker": "~13.3.1",
     "expo-linear-gradient": "~11.4.0",
+    "expo-print": "~11.3.0",
+    "expo-sharing": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
